# WebhookForCustomConnector/DataModel/Subscription.cs
@@ -3,16 +3,14 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
 
-namespace WebHookForCustomConnector.DataModel
+namespace WebhookForCustomConnector.DataModel
 {
     public enum TypeEvent
     {
         NewOrder=1,
         InStore=2
     }
-    /// <summary>
-    /// This class 
-    /// </summary>
+    
     public class Subscription
     {
         public TypeEvent Event { get; set; }
@@ -22,9 +20,9 @@ namespace WebHookForCustomConnector.DataModel
         public string Oid { get; set; }
         public string Name { get; set; }
     }
-    public class Webhook
+    public class CallBack
     {
-        public string CallBackUrl { get; set; }
+        public string Url { get; set; }
     }
 
 }
