# WebhookForCustomConnector/OpenApiDefinition/OpenApiDefinition.json
@@ -8,7 +8,7 @@
   "basePath": "/",
   "schemes": [ "https" ],
   "consumes": [ "application/json" ],
-  "produces": [ "application/json" ],
+  "produces": [ "application/json" ], 
   "paths": {
     "/event/neworder": {
       "x-ms-notification-content": {
@@ -25,16 +25,16 @@
         "parameters": [
           {
             "in": "body",
-            "name": "Webhook",
+            "name": "Callback",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Webhook"
+              "$ref": "#/definitions/Callback"
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Success"           
+            "description": "Success"
           }
         }
       }
@@ -54,9 +54,9 @@
         "parameters": [
           {
             "in": "body",
-            "name": "Webhook",
+            "name": "Callback",
             "schema": {
-              "$ref": "#/definitions/Webhook"
+              "$ref": "#/definitions/Callback"
             }
           }
         ],
@@ -95,6 +95,24 @@
         }
       }
     },
+    "/list/InStore": {
+      "get": {
+        "description": "Récupère la liste des nouveaux produits en magasin (version d'évaluation)",
+        "summary": "Récupère la liste des nouveaux produits en magasin (version d'évaluation)",
+        "operationId": "GetListInstore",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/InStore"
+              }
+            }
+          }
+        }
+      }
+    },
     "/list/neworders": {
       "get": {
         "description": "Récupère la liste des nouvelles commandes (version d'évaluation)",
@@ -112,28 +130,17 @@
     }
   },
   "definitions": {
-    "Webhook": {
+    "Callback": {
       "type": "object",
-      "required": [ "callBackUrl" ],
+      "required": [ "Url" ],
       "properties": {
-        "callBackUrl": {
+        "Url": {
           "x-ms-notification-url": true,
           "x-ms-visibility": "internal",
-          "required": [ "callBackUrl" ],
+          "required": [ "Url" ],
           "description": "URL de rappel",
           "title": "URL de rappel",
           "type": "string"
-        }
-      }
-    },
-    "OrderDetails": {
-      "type": "object",
-      "properties": {
-        "orders": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Order"
-          }
         }
       }
     },
@@ -149,6 +156,17 @@
         "quantity": {
           "format": "int32",
           "type": "integer"
+        }
+      }
+    },
+    "OrderDetails": {
+      "type": "object",
+      "properties": {
+        "orders": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Order"
+          }
         }
       }
     },
